Closed
Bug 1249244
Opened 10 years ago
Closed 10 years ago
Fix b2g bustage introduced by bug 1177242
Categories
(Core :: WebRTC: Audio/Video, defect)
Core
WebRTC: Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla47
| Tracking | Status | |
|---|---|---|
| firefox47 | --- | fixed |
People
(Reporter: kanru, Unassigned)
References
Details
Attachments
(1 file)
No description provided.
| Reporter | ||
Comment 1•10 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/35437/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/35437/
| Reporter | ||
Updated•10 years ago
|
Attachment #8720741 -
Flags: review?(jolin)
| Reporter | ||
Updated•10 years ago
|
Attachment #8720741 -
Flags: review?(jolin) → review?(cyu)
Comment 2•10 years ago
|
||
Comment on attachment 8720741 [details]
MozReview Request: Bug 1249244 - Add missing argument to MediaEngineGonkVideoSource::Allocate.
https://reviewboard.mozilla.org/r/35437/#review32079
Attachment #8720741 -
Flags: review?(cyu) → review+
Comment 4•10 years ago
|
||
We might be missing something here: getUserMedia() seems broken (crash)
Flags: needinfo?(jlorenzo)
Comment 5•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox47:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Comment 6•10 years ago
|
||
Sorry to reply 3 months later, I haven't been working on Firefox OS since then. The remaining crashes attached to bug 1245091 don't mention getUserMedia(). Clearing NI. Please NI me again if I missed something that you'd like me to take care of.
Flags: needinfo?(jlorenzo)
You need to log in
before you can comment on or make changes to this bug.
Description
•